fix(login): corrigindo registro de usuário e verificação de email
